Fix spacing between image & header on 404 page

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -396,7 +396,7 @@
 @media screen and (max-width: 768px) {
 
     .error-container img {
-        margin-top: 80px;
+        margin-top: 50px;
         width: 200px;
 	    height: 200px;
     }
