--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -744,6 +744,7 @@ footer .main {
 	width: 100%;
 	height: 100vh;
 	background-color: #f2dfcf;
+	overflow: auto;
 }
 
 .error-container img {
